<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="failed_to_read">Failed to read UriBeacon</string>
    <string name="failed_with_code">Failed with code:</string>
    <string name="failed_to_write">Failed to write UriBeacon</string>
    <string name="wrong_password">Wrong password please try again…</string>
    <string name="disconnected_from_beacon">Disconnected from beacon</string>
    <string name="invalid_uri">Invalid Uri</string>
    <string name="reset_failed">Could not reset UriBeacon to its default values</string>
    <string name="tx_power_lowest">Lowest</string>
    <string name="tx_power_low">Low</string>
    <string name="tx_power_medium">Medium</string>
    <string name="tx_power_high">High</string>
    <string name="https">https://</string>
    <string name="http">http://</string>
    <string name="urnuuid">urn:uuid:</string>
    <string name="invalid_data">Beacon Contains Invalid Data</string>
    <string name="exampleCom">www.example.com</string>
    <string name="period">Period</string>
    <string name="powerMode">Power Mode</string>
    <string name="unlocked">Unlocked</string>
    <string name="lock">Lock</string>
    <string name="ms">ms</string>
    <string name="dbm">dBm</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Enter UriBeacon password</string>
    <string name="write_beacon">Write</string>
    <string name="enter_password_again">Enter password again…</string>
    <string name="no_password">Please enter a password</string>
    <string name="password_missmatch">Passwords don\'t match</string>
    <string name="tx_power_level">Tx Power Level</string>
    <string name="show_advanced_settings">Show Advanced Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_stop_refresh">Stop Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_config">Configure UriBeacon</string>
    <string name="version_text">Version:</string>
    <string name="uri">URI</string>
    <string name="uriBeacon_characteristics">UriBeacon Characteristics</string>
    <string name="menu_save">Save to UriBeacon</string>
    <string name="flags">Flags</string>
    <string name="txPowerMode">Tx Power Mode</string>
    <string name="beacon_period">Beacon Period</string>
    <string name="tx_power_mode">Tx Power Mode</string>
    <string name="advertisedTxPowerLevel">Advertised Tx Power Level</string>
    <string name="resetBeacon">Reset to defaults</string>
</resources>
