<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             tools:context="org.uribeacon.widget.ConfigUriBeaconFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView style="@style/label"
                  android:visibility="gone"
                  android:text="@string/uri"
                  android:id="@+id/uriLabel"/>
        <LinearLayout style="@style/row"
                      android:visibility="gone"
                      android:id="@+id/urlRow">
            <Spinner android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                     android:entries="@array/uriProtocols"
                     android:id="@+id/spinner_uriProtocols"/>
            <EditText style="@style/editText"
                      android:inputType="textUri"
                      android:nextFocusDown="@+id/editText_flags"
                      android:hint="@string/exampleCom"
                      android:id="@+id/editText_uri"/>
        </LinearLayout>
        <LinearLayout style="@style/row"
                      android:visibility="gone"
                      android:id="@+id/secondRowV1">
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/flags"
                          android:id="@+id/flagsLabelV1"/>
                <EditText style="@style/editText"
                          android:inputType="textCapWords"
                          android:nextFocusDown="@+id/editText_txPowerLevel"
                          android:id="@+id/editText_flagsV1"/>
            </LinearLayout>
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/tx_power_level"/>
                <RelativeLayout style="@style/unitBox">
                    <EditText style="@style/editText"
                              android:inputType="numberSigned"
                              android:imeOptions="actionDone"
                              android:id="@id/editText_txPowerLevel"/>
                    <TextView style="@style/unit"
                              android:layout_alignBaseline="@id/editText_txPowerLevel"
                              android:text="@string/dbm"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/row"
                      android:visibility="gone"
                      android:id="@+id/secondRowV2">
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/flags"
                          android:id="@+id/flagsLabel"/>
                <EditText style="@style/editText"
                          android:inputType="textCapWords"
                          android:nextFocusDown="@+id/editText_beaconPeriod"
                          android:id="@id/editText_flags"/>
            </LinearLayout>
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/period"
                          android:id="@+id/periodLabel"/>
                <RelativeLayout style="@style/unitBox">
                    <EditText style="@style/editText"
                              android:inputType="number"
                              android:nextFocusDown="@+id/editText_txCal0"
                              android:id="@id/editText_beaconPeriod"/>
                    <TextView style="@style/unit"
                              android:text="@string/ms"
                              android:layout_alignBaseline="@id/editText_beaconPeriod"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/powerMode"
                          android:id="@+id/powerModeLabel"/>
                <Spinner android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:entries="@array/powerModes"
                         android:id="@+id/spinner_powerMode"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/row"
            android:visibility="gone"
            android:id="@+id/txCalRow">
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/tx_power_lowest"
                          android:id="@+id/labelHigh"/>
                <RelativeLayout style="@style/unitBox">
                    <EditText style="@style/editText"
                              android:inputType="numberSigned"
                              android:nextFocusDown="@+id/editText_txCal1"
                              android:id="@id/editText_txCal0"/>
                    <TextView style="@style/unit"
                              android:layout_alignBaseline="@id/editText_txCal0"
                              android:text="@string/dbm"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/tx_power_low"
                          android:id="@+id/labelMedium"/>
                <RelativeLayout style="@style/unitBox">
                    <EditText style="@style/editText"
                              android:inputType="numberSigned"
                              android:nextFocusDown="@+id/editText_txCal2"
                              android:id="@id/editText_txCal1"/>
                    <TextView style="@style/unit"
                              android:layout_alignBaseline="@id/editText_txCal1"
                              android:text="@string/dbm"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/tx_power_medium"
                          android:id="@+id/labelLow"/>
                <RelativeLayout style="@style/unitBox">
                    <EditText style="@style/editText"
                              android:inputType="numberSigned"
                              android:nextFocusDown="@+id/editText_txCal3"
                              android:id="@id/editText_txCal2"/>
                    <TextView style="@style/unit"
                              android:layout_alignBaseline="@id/editText_txCal2"
                              android:text="@string/dbm"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout style="@style/inlineBox">
                <TextView style="@style/label"
                          android:text="@string/tx_power_high"
                          android:id="@+id/labelLowest"/>
                <RelativeLayout style="@style/unitBox">
                    <EditText style="@style/editText"
                              android:inputType="numberSigned"
                              android:imeOptions="actionDone"
                              android:id="@id/editText_txCal3"/>
                    <TextView style="@style/unit"
                              android:layout_alignBaseline="@id/editText_txCal3"
                              android:text="@string/dbm"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/lastRow">
            <TextView style="@style/label"
                      android:text="@string/lock"
                      android:id="@+id/lockLabel"/>
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_lock"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/show_advanced_settings"
            android:id="@+id/button_advanced_settings"/>
    </LinearLayout>
</FrameLayout>
